fixed hero div and wrapped cards and hero div together so cards show below the hero div.

--- a/project/styles/cottage.css
+++ b/project/styles/cottage.css
@@ -112,22 +112,27 @@ aside {
 
 .hero {
     padding: 10px;
-    
+    position: relative;       
 }
 
-.hero img {
-    
+.hero img {    
     width: 100%;
     height: auto;
-    
+    opacity: 0.5;       
 }
+
+.hero-title {
+    position: absolute;
+    top: 10%;
+    left: 10%;
+}
+
 
 .cards {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     padding: 2em;
-    box-shadow: inset 0 0 10px #333;
-    
+    box-shadow: inset 0 0 10px #333;          
 }
 
 .cards img {
